macro/tests/err/unexpected_punctuation.stderr
error: Minuet lexing failed: unexpected punctuation '@'
 --> tests/err/unexpected_punctuation.rs:4:16
  |
4 |     minuet!(foo@bar);
  |                ^
