macro/tests/err/unexpected_punctuation.rs
use minuet_macro::minuet;

fn main() {
    minuet!(foo@bar);
}
